--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
 	margin:0px;
+	background-image: url(https://images.unsplash.com/photo-1565157815331-b23f51950854?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80);
+	background-size: cover;
 }
 
 .container {
@@ -10,8 +12,9 @@ body{
 h1 {
 	font-family: fantasy;
 	font-size: 3em;
-	border-bottom: 2px solid pink;
-	border-right: 2px solid pink;
+	color: #27ae60;
+	border-bottom: 2px solid #16a085;
+	border-right: 2px solid #16a085;
 	width: 400px;
 	text-align: center;
 	-moz-box-shadow: 4px 4px 5px #888888;
